--- a/Launcher/changelog.txt
+++ b/Launcher/changelog.txt
@@ -1,7 +1,3 @@
-hello beta testers!
-please press start openrec at the bottom
-
-and just see if it works with 2016 pls
-
-thanks@!!
--recroom2016
+new banner
+rich presence you can use
+in the folder and much more
